# docs/swagger.json
@@ -1236,6 +1236,54 @@
                 }
             }
         },
+        "/quest/answer": {
+            "patch": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "endpoint to update questionnaires (Ini endpoint untuk jawaban)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Quest"
+                ],
+                "summary": "UpdateQuestionnaires",
+                "parameters": [
+                    {
+                        "description": "Update Question Body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.UpdateQuestionnairesRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/results": {
             "get": {
                 "security": [
@@ -1902,6 +1950,20 @@
                 }
             }
         },
+        "request.QuestionnaresAnswerRequest": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "number": {
+                    "type": "integer"
+                },
+                "question_id": {
+                    "type": "string"
+                }
+            }
+        },
         "request.RegisterRequest": {
             "type": "object",
             "required": [
@@ -1963,6 +2025,17 @@
                 },
                 "weight_kg": {
                     "type": "number"
+                }
+            }
+        },
+        "request.UpdateQuestionnairesRequest": {
+            "type": "object",
+            "properties": {
+                "answers": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.QuestionnaresAnswerRequest"
+                    }
                 }
             }
         },
